ajustes de diseño, integración con github para ver repositorios y ajustes en django generales para exponer api al JS.

--- a/backend/inquiries/templates/inquiries/_form_public.html
+++ b/backend/inquiries/templates/inquiries/_form_public.html
@@ -3,7 +3,7 @@
 
     <!-- Nombres -->
     <div class="form-group form-row">
-        <label for="names" class="col-12 col-md-3 text-primary">Nombre completo:</label>
+        <label for="names" class="col-12 col-md-3 text-primary">Nombre:</label>
         <div class="col-12 col-md-9">
             <input type="text" class="form-control" name="names" id="names"
                     placeholder="Ej: Ana Gómez / Carlos Ruiz"
@@ -71,8 +71,8 @@
             <div class="input-group">
                 <input type="date" name="date" id="date-pick" class="form-control datepicker"
                         data-parsley-required-message="La fecha no es válida">
-                <label class="input-group-append input-group-cita" for="date-pick">
-                    <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                <label class="input-group-append input-group-cita jd-icon-reunion-container" for="date-pick">
+                    <span class="input-group-text jd-icon-reunion"><i class="far fa-calendar-alt"></i></span>
                 </label>
             </div>
         </div>
@@ -86,8 +86,8 @@
                 <input type="text" name="time" id="time" class="form-control timepicker"
                         data-parsley-required-message="La hora no es válida"
                         data-parsley-errors-container=".error-dia-cita">
-                <label for="time" class="input-group-append input-group-cita">
-                    <span class="input-group-text"><i class="far fa-clock"></i></span>
+                <label for="time" class="input-group-append input-group-cita jd-icon-reunion-container">
+                    <span class="input-group-text jd-icon-reunion"><i class="far fa-clock"></i></span>
                 </label>
             </div>
             <div class="error-dia-cita"></div>
