--- a/backend/static/css/scss/styles.scss
+++ b/backend/static/css/scss/styles.scss
@@ -15,3 +15,7 @@
 // Projects section
 @import 'projects_section';
 @import 'skills_habilidades_tech';
+
+// Librerías propias:
+@import 'lib/terminal_landing';
+@import 'components/tooltip/jd_tooltip';
