--- a/backend/static/css/scss/_header.scss
+++ b/backend/static/css/scss/_header.scss
@@ -10,8 +10,8 @@
 
     .container {
         .row {
-            padding-left: 2.5rem;
-            padding-right: 2.5rem;
+            // padding-left: 2.5rem;
+            // padding-right: 2.5rem;
         }
     }
 }
@@ -47,6 +47,7 @@
             opacity: 0;
             transform: scale(0);
             transition: all 0.6s ease-in-out;
+            width: 0;
         }
 
         // BUTTON HAMBURGUER
@@ -69,6 +70,7 @@
 
             // JD - dark
             .jd-white {
+                width: auto;
                 opacity: 1;
                 transform: scale(1);
                 left: 45%;
