--- a/backend/static/css/scss/_projects_section.scss
+++ b/backend/static/css/scss/_projects_section.scss
@@ -18,8 +18,9 @@
     }
 
     /* Cabecera */
+    // TODO: refactorizar
     .projects-title {
-    font-size: 2.1rem;
+    font-size: 2.6rem;
     font-weight: 800;
     letter-spacing: -0.03em;
     color: #0f172a;
