--- a/backend/static/css/scss/_videos_slide_container.scss
+++ b/backend/static/css/scss/_videos_slide_container.scss
@@ -135,7 +135,7 @@
 
 .metrics-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-template-rows: 1fr;
     gap: 1.5rem;
     height: 100%;
@@ -165,12 +165,11 @@
 @media (max-width: 767.98px) {
   .metrics-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
     gap: 0.8rem;
     width: 100%;
     min-height: 260px;
-    max-width: 350px;
     margin: 0 auto;
   }
   .metrics-grid .metric-block {
