mejoras en el diseño y experiencia de usuario

--- a/backend/static/css/scss/_projects_section.scss
+++ b/backend/static/css/scss/_projects_section.scss
@@ -2,6 +2,7 @@
    SECCIÓN PROYECTOS REALES
    ============================ */
 .projects-section {
+    position: relative;
     .swiper-slide {
     height: auto !important;
     min-height: 1px;
