--- a/backend/static/css/scss/styles.scss
+++ b/backend/static/css/scss/styles.scss
@@ -19,3 +19,5 @@
 // Librerías propias:
 @import 'lib/terminal_landing';
 @import 'components/tooltip/jd_tooltip';
+@import 'components/acordion/jd_acordion';
+@import 'lib/introJS';
